--- a/css/style.css
+++ b/css/style.css
@@ -7,40 +7,18 @@
   --second-color: hsl(280, 87%, 65%);
   --check-background: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
   --bold: 700;
-  /* Light Theme */
-  --very-light-gray-lighttheme: hsl(0%, 0%, 98%);
-  --very-light-grayish-blue-lighttheme: hsl(236, 33%, 92%);
-  --light-grayish-blue-lighttheme: hsl(233, 11%, 84%);
-  --dark-grayish-blue-lighttheme: hsl(236, 9%, 61%);
-  --very-dark-grayish-blue-lighttheme: hsl(235, 19%, 35%);
-  /* Dark Theme */
-  --very-dark-blue-darktheme: hsl(235, 21%, 11%);
-  --very-dark-desaturated-blue-darktheme: hsl(235, 24%, 19%);
-  --light-grayish-blue-darktheme: hsl(234, 39%, 85%);
-  --light-grayish-blue-hover-darktheme: hsl(236, 33%, 92%);
-  --dark-grayish-blue-darktheme: hsl(234, 11%, 52%);
-  --very-dark-grayish-blue-one-darktheme: hsl(233, 14%, 35%);
-  --very-dark-grayish-blue-two-darktheme: hsl(237, 14%, 26%);
   /* Theme */
   --body-color: hsl(235, 21%, 11%);
-  /* --body-color:hsl(236, 33%, 92%);  */
   --list-color:hsl(235, 24%, 19%);
-  /* --list-color: #fff;  */
   --input-font-color: hsl(234, 39%, 85%);
-  /* --input-font-color: #000;  */
   --font-color: hsl(234, 39%, 85%);
-  /* --font-color: hsl(235, 19%, 35%);  */
   --btns-font-color: hsl(234, 39%, 85%);
-  /* --btns-font-color: hsl(236, 9%, 61%);  */
   --btns-font-color-hover: hsl(236, 33%, 92%);
   --bottom-nav-border-color: hsl(234, 11%, 52%);
   --items-left-font-color: hsl(234, 11%, 52%);
   --cheched-font-color: hsl(233, 14%, 35%);
-  /* --cheched-font-color: hsl(236, 9%, 61%);  */
   --add-border-color: hsl(237, 14%, 26%);
-  /* --add-border-color: hsl(236, 9%, 61%);  */
   --circle-border-color: hsl(237, 14%, 26%);
-  /* --circle-border-color: hsl(236, 9%, 61%);  */
 }
 
 /* End Variables */
@@ -52,6 +30,7 @@ body {
   font-size: 18px;
   font-weight: 400;
   background-color: var(--body-color);
+  min-height: 100vh;
 }
 
 textarea:focus,
@@ -307,3 +286,27 @@ header .logo {
 }
 
 /* End Active Classes */
+
+/* Footer */
+
+footer {
+  width: 100%;
+  height: 50px;
+  background-color: var(--list-color);
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--font-color);
+}
+
+footer span {
+  color: var(--bright-blue);
+}
+
+@media (max-width: 767px) {
+  footer {
+    font-size: 12px;
+  }
+}
