--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* Start Variables */
 
 :root {
+  --transition: background-color 0.2s ease 0s, color 0.5s ease 0s;
   /* Primaty */
   --bright-blue: hsl(220, 98%, 61%);
   --first-color: hsl(192, 100%, 67%);
@@ -35,6 +36,7 @@ body {
   font-size: 18px;
   font-weight: 400;
   background-color: var(--body-color);
+  transition: var(--transition);
   /* min-height: 100vh; */
   padding-bottom: 50px;
 }
@@ -58,6 +60,7 @@ input:focus{
   align-items: center;
   margin: 10px;
   border: 2px solid var(--add-border-color);
+  transition: var(--transition);
   cursor: pointer;
 }
 
@@ -76,6 +79,7 @@ input:focus{
   opacity: 0.5;
   border-color: var(--first-color) var(--first-color) var(--second-color) var(--second-color);
   background-image: var(--check-background);
+  transition: var(--transition);
 }
 
 .add:hover i {
@@ -155,6 +159,7 @@ header .logo {
   display: flex;
   justify-content: space-between;
   background-color: var(--list-color);
+  transition: var(--transition);
   align-items: center;
   border-radius: 10px;
 }
@@ -164,6 +169,7 @@ header .logo {
   height: 50px;
   background-color: transparent;
   color: var(--input-font-color);
+  transition: var(--transition);
   text-indent: 10px;
   border: none;
 }
@@ -174,6 +180,7 @@ header .logo {
 
 .tasks {
   background-color: var(--list-color);
+  transition: var(--transition);
   border-radius: 10px;
   margin: 50px 0;
 }
@@ -190,6 +197,7 @@ header .logo {
   flex: 1;
   padding-left: 10px;
   color: var(--font-color);
+  transition: var(--transition);
 }
 
 .tasks .task .del {
@@ -202,6 +210,7 @@ header .logo {
   opacity: 0;
   font-size: 25px;
   color: var(--add-border-color);
+  transition: var(--transition);
 }
 
 .tasks .task:hover .del {
@@ -216,18 +225,21 @@ header .logo {
   padding: 30px;
   font-size: 25px;
   color: var(--font-color);
+  transition: var(--transition);
 }
 
 .tasks .bottom-nav {
   display: flex;
   justify-content: space-between;
   border-top: 1px solid var(--bottom-nav-border-color);
+  transition: var(--transition);
   padding: 10px 20px;
   align-items: center;
 }
 
 .tasks .bottom-nav .items {
   color: var(--items-left-font-color);
+  transition: var(--transition);
 }
 
 @media (max-width: 767px) {
@@ -240,6 +252,7 @@ header .logo {
   background-color: transparent;
   border: none;
   color: var(--btns-font-color);
+  transition: var(--transition);
   cursor: pointer;
   margin: 0 10px;
 }
@@ -252,10 +265,12 @@ header .logo {
 
 .tasks .bottom-nav .btns button:hover {
   color: var(--btns-font-color-hover);
+  transition: var(--transition);
 }
 
 .tasks .bottom-nav .clear {
   color: var(--btns-font-color);
+  transition: var(--transition);
   cursor: pointer;
 }
 
@@ -267,6 +282,7 @@ header .logo {
 
 .tasks .bottom-nav .clear:hover {
   color: var(--btns-font-color-hover);
+  transition: var(--transition);
 }
 
 /* End Tasks */
@@ -276,19 +292,23 @@ header .logo {
 
 .checked {
   background-image: var(--check-background) !important;
+  transition: var(--transition);
 }
 
 .checked i {
   color: white !important;
+  transition: var(--transition);
 }
 
 .checked + p {
   text-decoration: line-through !important;
   color: var(--cheched-font-color) !important;
+  transition: var(--transition);
 }
 
 .active-type {
   color: var(--bright-blue) !important;
+  transition: var(--transition);
 }
 
 /* End Active Classes */
@@ -299,6 +319,7 @@ footer {
   width: 100%;
   height: 50px;
   background-color: var(--list-color);
+  transition: var(--transition);
   position: absolute;
   bottom: 0;
   display: flex;
@@ -309,6 +330,7 @@ footer {
 
 footer span {
   color: var(--bright-blue);
+  transition: var(--transition);
 }
 
 @media (max-width: 767px) {
